Fixed logo alignment on authentication screen

--- a/ui/app/styles/_page.scss
+++ b/ui/app/styles/_page.scss
@@ -682,6 +682,8 @@
       }
 
       .icon.brand {
+        display: flex;
+
         path {
           fill: color.$black;
           stroke: $brand-color;
